# pulumi-matchbox

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.yml  .upgrade-config.yml  Makefile  README.md  config.yaml  go.work  go.work.sum
.github/actions/download-bin/: action.yml
.github/actions/download-prerequisites/: action.yml
.github/actions/download-provider/: action.yml
.github/actions/upload-bin/: action.yml
.github/actions/upload-prerequisites/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  check-upstream-upgrade.yml  license.yml  main.yml  prerequisites.yml  publish.yml  release.yml  resync-build.yml  upgrade-provider.yml
deployment-templates/: .goreleaser.yml
docs/: _index.md  installation-configuration.md
examples/: examples_nodejs_test.go  go.mod  go.sum
examples/typescript/: Pulumi.yaml  index.ts  package-lock.json  package.json
provider/: go.mod  go.sum  resources.go
provider/cmd/pulumi-resource-matchbox/: main.go  schema.json
provider/cmd/pulumi-tfgen-matchbox/: main.go
sdk/: go.mod
sdk/dotnet/: Group.cs  Profile.cs  Provider.cs  Pulumiverse.Matchbox.csproj  README.md  Utilities.cs
sdk/dotnet/Config/: Config.cs
sdk/go/matchbox/: doc.go  group.go  init.go  (+4 more)
sdk/nodejs/: README.md  group.ts  index.ts  package-lock.json  package.json  profile.ts  provider.ts  tsconfig.json
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumiverse_matchbox/: README.md  __init__.py  group.py  profile.py  provider.py  pulumi-plugin.json
sdk/python/pulumiverse_matchbox/config/: __init__.pyi  vars.py
(+3 files in other folders)
