[project]
  name = "pulumiverse_matchbox"
  description = "A Pulumi package for creating and managing the Matchbox iPXE server."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "matchbox", "category/network"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com"
    Repository = "https://github.com/pulumiverse/pulumi-matchbox"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumiverse_matchbox = ["py.typed", "pulumi-plugin.json"]
